<resources>
    <string name="app_name">SRA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="intro">The Society of Robotics and Automation is a society for VJTI students under
        the Department of Mechanical Engineering. The society conducts workshops like
        Wall-E (Self Balancing and Line Following Robot) and MARIO (Robotic Manipulator controlled
        using ROS) to teach the basics of robotics to first year students.</string>
    <string name="contact_us">Contact Us</string>>
    <string name="contact">E-mail:\nsraworkshop@gmail.com\n\nWho to contact?\n\nGeneral
         Secretary:\nLaukikHase\nlaukik17@gmail.com\n+91 98673 35549\n\nJoint-General Secretary:\nVednarayan
        Iyer\nvednarayan29@gmail.com\n+91 83691 10314\n\nJoint-General Secretary:\nVishnu
         Parammal\nvishnu.130599@gmail.com\n+91 86230 80351</string>
    <string name="rating">We would love to hear from you</string>
    <string name="submit">Submit</string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="share_text">I am loving this app. I recommend this to you as well. It will help you during hardware projets.</string>
    <!-- Strings related to login -->
    <string name="prompt_id">ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="inventory">Inventory</string>
    <string name="polls">Polls</string>
    <string name="cash_request">Cash Request</string>
    <string name="tasks">Tasks</string>
    <string name="projects">Projects</string>
    <string name="achievements">Achievements</string>
    <string name="shops">Shops</string>
    <string name="sign_in_as_guest">Sign in as Guest</string>
    <string name="sign_out">Sign Out</string>
    <string name="item_name">Item name</string>
    <string name="item_specs">Items specs</string>
    <string name="item_quantity">Item quantity</string>
    <string name="item_location">Item location</string>
    <string name="add_item">Add Item</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cross">x</string>
    <string name="myEmail">vishnu.parammal@gmail.com</string>
    <string name="myPassowrd">parammal</string>
</resources>