<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/darker_gray"
    android:paddingTop="@dimen/mini_margin"
    android:paddingStart="@dimen/mini_margin"
    android:paddingEnd="@dimen/mini_margin">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/item_name"
                app:layout_constraintBottom_toTopOf="@+id/item_specs"
                app:layout_constraintStart_toStartOf="@+id/item_specs"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_specs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/item_specs"
                app:layout_constraintBottom_toTopOf="@+id/item_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/item_name" />

            <TextView
                android:id="@+id/item_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/item_location"
                app:layout_constraintBottom_toTopOf="@+id/item_quantity"
                app:layout_constraintStart_toStartOf="@+id/item_specs"
                app:layout_constraintTop_toBottomOf="@+id/item_specs" />

            <TextView
                android:id="@+id/subtract_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minus"
                app:layout_constraintBottom_toBottomOf="@+id/item_quantity"
                app:layout_constraintEnd_toStartOf="@+id/item_quantity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/item_quantity" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/item_quantity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/add_quantity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/subtract_quantity" />

            <TextView
                android:id="@+id/add_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"
                app:layout_constraintBottom_toBottomOf="@+id/item_quantity"
                app:layout_constraintEnd_toStartOf="@+id/remove_item"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/item_quantity"
                app:layout_constraintTop_toTopOf="@+id/item_quantity"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/remove_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cross"
                app:layout_constraintBottom_toBottomOf="@+id/item_quantity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/add_quantity"
                app:layout_constraintTop_toTopOf="@+id/item_quantity" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
